# 2024.0842

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
cmake/: FindGUROBI.cmake
data/: README.md
data/H_2_4_Gamma_0_1.0/: rrap_ns10_nh2_m2_seed1.txt  rrap_ns10_nh2_m2_seed2.txt  rrap_ns10_nh2_m2_seed3.txt  rrap_ns10_nh2_m2_seed4.txt  rrap_ns10_nh3_m2_seed1.txt  rrap_ns10_nh3_m2_seed2.txt  rrap_ns10_nh3_m2_seed3.txt  rrap_ns10_nh3_m2_seed4.txt  rrap_ns10_nh4_m2_seed1.txt  rrap_ns10_nh4_m2_seed2.txt  rrap_ns10_nh4_m2_seed3.txt  rrap_ns10_nh4_m2_seed4.txt  rrap_ns12_nh2_m2_seed1.txt  rrap_ns12_nh2_m2_seed2.txt  rrap_ns12_nh2_m2_seed3.txt  rrap_ns12_nh2_m2_seed4.txt  rrap_ns12_nh3_m2_seed1.txt  rrap_ns12_nh3_m2_seed2.txt  rrap_ns12_nh3_m2_seed3.txt  rrap_ns12_nh3_m2_seed4.txt  rrap_ns12_nh4_m2_seed1.txt  rrap_ns12_nh4_m2_seed2.txt  rrap_ns12_nh4_m2_seed3.txt  rrap_ns12_nh4_m2_seed4.txt  rrap_ns5_nh2_m2_seed1.txt  rrap_ns5_nh2_m2_seed2.txt  rrap_ns5_nh2_m2_seed3.txt  rrap_ns5_nh2_m2_seed4.txt  rrap_ns5_nh3_m2_seed1.txt  rrap_ns5_nh3_m2_seed2.txt  rrap_ns5_nh3_m2_seed3.txt  rrap_ns5_nh3_m2_seed4.txt  rrap_ns5_nh4_m2_seed1.txt  rrap_ns5_nh4_m2_seed2.txt  rrap_ns5_nh4_m2_seed3.txt  rrap_ns5_nh4_m2_seed4.txt  rrap_ns6_nh2_m2_seed1.txt  rrap_ns6_nh2_m2_seed2.txt  rrap_ns6_nh2_m2_seed3.txt  rrap_ns6_nh2_m2_seed4.txt  (+44 more)
results/: README.md
src/: bb_instance.cpp  bb_instance.h  bb_main.cpp  bb_solver.cpp  bb_solver.h  bb_utility.cpp  bb_utility.h  mm_instance.cpp  mm_instance.h  mm_main.cpp  mm_reliability.cpp  mm_reliability.h  mm_solution.cpp  mm_solution.h  mm_solver.cpp  mm_solver.h
(+184 files in other folders)
